# prompt-works-blog

./: .gitignore  Makefile  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: index.md
docs/notes/: AIEWF2025_Social_Post.md
docs/overrides/partials/: comments.html
docs/overrides/partials/integrations/analytics/: custom.html
docs/posts/: AI Engineer Worlds Fair 2025.md  If you aim to replace humans with AI, you're doing it wrong.md  Is all AI Powered Software Development Vibe Coding?.md  Local No-Code MCP Agents.md  My Favorite Tools.md
notebooks/: chunk_windowing.ipynb  two_stage_splitting.ipynb
