[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Matt Florence <matt@mattflo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = {extras = ["imaging"], version = "^9.6.11"}
cairosvg = "^2.7.1"
pillow = ">=10.2,<11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
